# UniProtMapper

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-docs.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml
dev/: .buildinfo  field_reference.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/_modules/: index.html
dev/_modules/UniProtMapper/: uniprotkb_fields.html  utils.html
dev/_sources/: field_reference.rst.txt  index.rst.txt
dev/_sources/api/: UniProtMapper.rst.txt  modules.rst.txt
dev/_sources/tutorials/: mapping.rst.txt
dev/api/: UniProtMapper.html  modules.html
dev/tutorials/: field_querying.html  mapping.html  retrieving.html
docs/: Makefile  README.md  build_docs.sh
docs/.github/workflows/: docs.yml
docs/source/: conf.py  field_reference.rst  index.rst  installation.rst
docs/source/api/: UniProtMapper.rst  modules.rst
docs/source/tutorials/: field_querying.rst  mapping.rst  retrieving.rst
src/UniProtMapper/: __init__.py  api.py  cli.py  field_base_classes.py  field_retriever.py  field_retriever_api.py  id_mapping_api.py  idmapping_api.py  interface.py  json_getter.py  parsed_uniprot.py  pretty_soup.txt  swiss_parser.py  uniprot_abbrev_crossrefs.json  uniprot_api.py  uniprot_kb_fields.py  uniprot_supported_tables.txt  uniprotkb.py  uniprotkb_api.py  uniprotkb_fields.py  utils.py  version.py  version_helper.py
src/UniProtMapper/resources/: cli_return_fields.txt  uniprot_crossref_details.json  uniprot_mapping_dbs.json  uniprot_return_fields.csv
src/UniProtMapping/: uniprot_api.py  uniprot_mapping_dbs.json  version.py
stable/: field_reference.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html
stable/_modules/: index.html
stable/_modules/UniProtMapper/: uniprotkb_fields.html  utils.html
stable/_sources/tutorials/: mapping.rst.txt
stable/api/: UniProtMapper.html  modules.html
stable/tutorials/: field_querying.html  mapping.html
tests/: __init__.py  test_field_retriever_api.py  test_id_mapping_api.py  test_idmapping_api.py  test_uniprotkb_api.py  test_uniprotkb_fields.py  test_utils.py
tests/resources/: A1_response_types.json  A3_mock_IDMapper_response.json  dict_comments.json  list_of_dicts.json  mock_crossref.json
