[metadata]
name = UniProtMapper
version = 0.0.1-dev
description = A Python wrapper for the UniProt Mapping RESTful API.
long_description = file: README.md

url = https://github.com/David-Araripe/UniProtMapper

Author = David Araripe
author_email = david.araripe17@gmail.com
maintainer = David Araripe
maintainer_email = david.araripe17@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
keywords = 
    uniprot
    protein ID
    gene ID

[options]
packages = find:
package_dir = 
    = src
install_requires =
    requests
    pandas
    numpy

[options.packages.find]
where = src

[options.package_data]
UniProtMapper = data/*.json